--- a/portolio-site/index.html
+++ b/portolio-site/index.html
@@ -23,8 +23,8 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand h1" href="#">Nik Goetzke</a>
-    <div class="navbar-container-right">
+    <a class="navbar-brand h1 order-sm-1 order-md-1" href="#">Nik Goetzke</a>
+    <!-- <div class="navbar-container-right d-flex">
       <button class="dark-mode-toggle rounded mr-2" id="dark-mode-toggle"><i class="fa-solid fa-moon"></i></button>
       <button class="navbar-toggler" type="button" id="navbar-toggler" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -32,8 +32,8 @@
           <i class="fas fa-bars"></i>
         </span>
       </button>
-    </div>
-    <div class=" collapse navbar-collapse" id="navbarNav">
+    </div> -->
+    <div class=" collapse navbar-collapse justify-content-center order-sm-3 order-md-2" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
           <a class="nav-link" href="#">Blog<span class="sr-only">(current)</span></a>
@@ -48,7 +48,16 @@
           <a class="nav-link" href="#">Contact<span class="sr-only">(current)</span></a>
         </li>
       </ul>
-
+    </div>
+    <div class="navbar-container-right d-flex order-sm-2 order-md-3">
+      <button class="dark-mode-toggle rounded mr-2" id="dark-mode-toggle"><i class="fa-solid fa-moon"></i></button>
+      <button class="navbar-toggler" type="button" id="navbar-toggler" data-toggle="collapse" data-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="custom-navbar-toggler-icon">
+          <i class="fas fa-bars"></i>
+        </span>
+      </button>
+    </div>
   </nav>
   <section class="hero d-flex justify-space-between align-items-center">
     <div class="container">
@@ -79,7 +88,7 @@
           </p>
           <ul class="list-unstyled">
             <li class="media mb-3">
-              <img src="/imgs/icons8-geometric-flowers-100.png" class="mr-3" alt="Client 1">
+              <img src="/imgs/icons8-geometric-flowers-100.png" class="mr-3 img-fluid" alt="Client 1">
               <div class="media-body">
                 <h5 class="mt-0 mb-1">Client 1</h5>
                 <p>
@@ -90,7 +99,7 @@
               </div>
             </li>
             <li class="media mb-3">
-              <img src="/imgs/icons8-geometric-flowers-100.png" class="mr-3" alt="Client 2">
+              <img src="/imgs/icons8-geometric-flowers-100.png" class="mr-3 img-fluid" alt="Client 2">
               <div class="media-body">
                 <h5 class="mt-0 mb-1">Client 2</h5>
                 <p>
@@ -117,7 +126,7 @@
       <div class="row">
         <div class="col-lg-4 col-md-6 portfolio-example">
           <div class="card  mb-4">
-            <img class="card-img-top" src="imgs/project-placeholder.png" alt="Portfolio 1">
+            <img class="card-img-top img-fluid" src="imgs/project-placeholder.png" alt="Portfolio 1">
             <div class="card-body">
               <h5 class="card-title">Web Design Project 1</h5>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio,
@@ -129,7 +138,7 @@
         </div>
         <div class="col-lg-4 col-md-6 portfolio-example">
           <div class="card mb-4">
-            <img class="card-img-top" src="imgs/project-placeholder.png" alt="Portfolio 2">
+            <img class="card-img-top img-fluid" src="imgs/project-placeholder.png" alt="Portfolio 2">
             <div class="card-body">
               <h5 class="card-title">Web Design Project 2</h5>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio,
@@ -141,7 +150,7 @@
         </div>
         <div class="col-lg-4 col-md-6 portfolio-example">
           <div class="card mb-4">
-            <img class="card-img-top" src="imgs/project-placeholder.png" alt="Portfolio 3">
+            <img class="card-img-top img-fluid" src="imgs/project-placeholder.png" alt="Portfolio 3">
             <div class="card-body">
               <h5 class="card-title">Web Design Project 3</h5>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio,
@@ -154,7 +163,7 @@
         </div>
         <div class="col-lg-4 col-md-6 portfolio-example">
           <div class="card mb-4">
-            <img class="card-img-top" src="imgs/project-placeholder.png" alt="Portfolio 3">
+            <img class="card-img-top img-fluid" src="imgs/project-placeholder.png" alt="Portfolio 3">
             <div class="card-body">
               <h5 class="card-title">Web Design Project 3</h5>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio,
