--- a/portolio-site/index.html
+++ b/portolio-site/index.html
@@ -23,7 +23,7 @@
 
 <body>
   <nav class="navbar navbar-expand-lg navbar-light">
-    <a class="navbar-brand h1 order-sm-1 order-md-1" href="#">Nik Goetzke</a>
+    <a class="navbar-brand h1 order-0" href="#">Nik Goetzke</a>
     <!-- <div class="navbar-container-right d-flex">
       <button class="dark-mode-toggle rounded mr-2" id="dark-mode-toggle"><i class="fa-solid fa-moon"></i></button>
       <button class="navbar-toggler" type="button" id="navbar-toggler" data-toggle="collapse" data-target="#navbarNav"
@@ -33,7 +33,7 @@
         </span>
       </button>
     </div> -->
-    <div class=" collapse navbar-collapse justify-content-center order-sm-3 order-md-2" id="navbarNav">
+    <div class=" collapse navbar-collapse justify-content-center order-2 order-lg-1" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
           <a class="nav-link" href="#">Blog<span class="sr-only">(current)</span></a>
@@ -49,7 +49,7 @@
         </li>
       </ul>
     </div>
-    <div class="navbar-container-right d-flex order-sm-2 order-md-3">
+    <div class="navbar-container-right d-flex order-1 order-lg-2">
       <button class="dark-mode-toggle rounded mr-2" id="dark-mode-toggle"><i class="fa-solid fa-moon"></i></button>
       <button class="navbar-toggler" type="button" id="navbar-toggler" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -64,11 +64,11 @@
       <div class="row">
         <div class="col-lg-6">
           <h1 class="hero-title mb-4">Welcome, I'm Nik Goetzke.</h1>
-          <p class="hero-text mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
+          <p class="hero-text mb-4 lg-font">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             Quisque
             auctor tellus
             euismod commodo malesuada. Nam blandit libero non libero placerat, et efficitur mi rhoncus.</p>
-          <a href="#" class="btn btn-danger btn-lg text-light mb-4" id="learn-more-btn">Learn More</a>
+          <a href="#" class="btn btn-lg mb-4" id="btn-primary">Learn More</a>
         </div>
         <div class="col-lg-6">
           <img src="imgs\hero-image-edit(1).png" alt="Hero illustration" class="img-fluid">
@@ -82,7 +82,7 @@
       <div class="row">
         <div class="col-lg-6">
           <h2 class="mb-3">See what our clients are saying</h2>
-          <p>
+          <p class="lg-font">
             Our web design business has helped numerous clients achieve their online goals. Read what they have to say
             about working with us:
           </p>
@@ -91,7 +91,7 @@
               <img src="/imgs/icons8-geometric-flowers-100.png" class="mr-3 img-fluid" alt="Client 1">
               <div class="media-body">
                 <h5 class="mt-0 mb-1">Client 1</h5>
-                <p>
+                <p class="lg-font">
                   "Working with the team at the web design business was an absolute pleasure. They listened to our needs
                   and delivered a website that exceeded our expectations. We highly recommend them to anyone looking for
                   a top-notch web design experience."
@@ -102,7 +102,7 @@
               <img src="/imgs/icons8-geometric-flowers-100.png" class="mr-3 img-fluid" alt="Client 2">
               <div class="media-body">
                 <h5 class="mt-0 mb-1">Client 2</h5>
-                <p>
+                <p class="lg-font">
                   "The web design business was a game changer for our business. Their expertise and attention to detail
                   helped us create a website that accurately represents our brand and has helped us attract new
                   customers."
@@ -131,8 +131,8 @@
               <h5 class="card-title">Web Design Project 1</h5>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio,
                 gravida pellentesque urna varius vitae.</p>
-              <a href="#" class="btn btn-danger btn-lg m-1">View Website</a>
-              <a href="#" class="btn btn-secondary btn-lg m-1">Learn More</a>
+              <a href="#" class="btn btn-danger btn-lg m-1" id="btn-primary">View Website</a>
+              <a href="#" class="btn btn-secondary btn-lg m-1" id="btn-secondary">Learn More</a>
             </div>
           </div>
         </div>
@@ -143,8 +143,8 @@
               <h5 class="card-title">Web Design Project 2</h5>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio,
                 gravida pellentesque urna varius vitae.</p>
-              <a href="#" class="btn btn-danger btn-lg m-1">View Website</a>
-              <a href="#" class="btn btn-secondary btn-lg m-1">Learn More</a>
+              <a href="#" class="btn btn-danger btn-lg m-1" id="btn-primary">View Website</a>
+              <a href="#" class="btn btn-secondary btn-lg m-1" id="btn-secondary">Learn More</a>
             </div>
           </div>
         </div>
@@ -155,8 +155,8 @@
               <h5 class="card-title">Web Design Project 3</h5>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio,
                 gravida pellentesque urna varius vitae.</p>
-              <a href="#" class="btn btn-danger btn-lg m-1">View Website</a>
-              <a href="#" class="btn btn-secondary btn-lg m-1">Learn More</a>
+              <a href="#" class="btn btn-danger btn-lg m-1" id="btn-primary">View Website</a>
+              <a href="#" class="btn btn-secondary btn-lg m-1" id="btn-secondary">Learn More</a>
             </div>
 
           </div>
@@ -168,8 +168,8 @@
               <h5 class="card-title">Web Design Project 3</h5>
               <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra euismod odio,
                 gravida pellentesque urna varius vitae.</p>
-              <a href="#" class="btn btn-danger btn-lg m-1">View Website</a>
-              <a href="#" class="btn btn-secondary btn-lg m-1">Learn More</a>
+              <a href="#" class="btn btn-danger btn-lg m-1" id="btn-primary">View Website</a>
+              <a href="#" class="btn btn-secondary btn-lg m-1" id="btn-secondary">Learn More</a>
             </div>
 
           </div>
