--- a/portolio-site/index.html
+++ b/portolio-site/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Nik Goetzke's personal web design portfolio">
   <title>Nik Goetzke - Portfolio</title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,8 +15,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-  <!-- <link rel="stylesheet" href="./css/reset.css">-->
-  <link rel="stylesheet" href="/style2.css">
+  <link rel="stylesheet" href="/css/style2.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
     integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
   <script src="https://kit.fontawesome.com/e54541c7e7.js" crossorigin="anonymous"></script>
@@ -24,15 +24,6 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light">
     <a class="navbar-brand h1 order-0" href="#">Nik Goetzke</a>
-    <!-- <div class="navbar-container-right d-flex">
-      <button class="dark-mode-toggle rounded mr-2" id="dark-mode-toggle"><i class="fa-solid fa-moon"></i></button>
-      <button class="navbar-toggler" type="button" id="navbar-toggler" data-toggle="collapse" data-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="custom-navbar-toggler-icon">
-          <i class="fas fa-bars"></i>
-        </span>
-      </button>
-    </div> -->
     <div class=" collapse navbar-collapse justify-content-center order-2 order-lg-1" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item active">
@@ -111,9 +102,6 @@
             </li>
           </ul>
         </div>
-        <!-- <div class="col-lg-6">
-          <img src="#" class="img-fluid" alt="Value Illustration">
-        </div> -->
       </div>
     </div>
   </section>
@@ -219,128 +207,6 @@
       </div>
     </div>
   </footer>
-  <!-- <header class="header">
-    <nav class="nav">
-       logo 
-      <a class="pill logo"><span class="carpe">Carpe</span><span class="futura">Futura</span></a>
-       menu button 
-      <input type="checkbox" class="menu-btn" id="menu-btn">
-      <label class=" menu-icon" for="menu-btn">
-        <span></span>
-        <span></span>
-        <span></span>
-      </label>
-       nav menu 
-      <ul class="nav-list">
-        <li><a href="#" class="menu-item">Blog</a></li>
-        <li><a href="#" class="menu-item">Work</a></li>
-        <li><a href="#" class="menu-item">About</a></li>
-        <li><a href="#" class="menu-item">Contact</a></li>
-      </ul>
-    </nav>
-     hero section title and introduction 
-    <div class="hero-section">
-      <div class="hero-title">
-        <h1>Nik Goetzke</h1>
-        <h2>Web Developer</h2>
-      </div>
-      <div class="hero-intro">
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis
-          numquam aliquid at nesciunt expedita architecto, id voluptates
-          laboriosam tempora dicta iusto repudiandae hic. Asperiores quia
-          commodi exercitationem ipsum corporis mollitia?
-        </p>
-        <p>Working at <a href="#">Lorem</a>. Based in Austin, TX</p>
-      </div>
-      hero section illustration
-      <img src="/imgs/hero-image-edit(1).png" alt="" class="hero-img">
-       tiles with information about value that can be provided  
-      <div class="tiles"></div>
-      <div class="tiles"></div>
-      <div class="tiles"></div>
-      <div class="tiles"></div>
-      <div class="tiles"></div>
-    </div>
-  </header>
-
-  <section class="project-section">
-    <h2 class="project-section-title">Projects</h2>
-    <div class="wrapper">
-      <figure role="presentation">
-        <img class="project-img square" src="imgs\project-placeholder.png" role="presentation" />
-      </figure>
-      <div class="project-text">
-        <h3 class="project-name">
-          Project Name
-          <div class="tools">
-            Tools Used, Date e.g. React/SASS (June/2021)
-          </div>
-        </h3>
-        <p class="project-description">Project description</p>
-        <div class="project-btn">
-          <btn href="#">View demo ></btn>
-          <btn href="#">Read the article ></btn>
-        </div>
-      </div>
-    </div>
-    <div class="wrapper">
-      <figure role="presentation">
-        <img class="project-img square" src="imgs\project-placeholder.png" role="presentation" />
-      </figure>
-      <div class="project-text">
-        <h3 class="project-name">
-          Project Name
-          <div class="tools">
-            Tools Used, Date e.g. React/SASS (June/2021)
-          </div>
-        </h3>
-        <p class="project-description">Project description</p>
-        <div class="project-btn">
-          <btn href="#">View demo ></btn>
-          <btn href="#">Read the article ></btn>
-        </div>
-      </div>
-    </div>
-    <div class="wrapper">
-      <figure role="presentation">
-        <img class="project-img square" src="imgs\project-placeholder.png" role="presentation" />
-      </figure>
-      <div class="project-text">
-        <h3 class="project-name">
-          Project Name
-          <div class="project-tools">
-            Tools Used, Date e.g. React/SASS (June/2021)
-          </div>
-        </h3>
-        <p class="project-description">Project description</p>
-        <div class="project-btn">
-          <btn href="#">View demo ></btn>
-          <btn href="#">Read the article ></btn>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <footer>
-    <ul class="footer-list">
-      <li class="list-item"><a href="mailto:carpefutura@sample.com" class="list-link" target="_blank"
-          rel="nopener noreferrer">Contact
-          Me</a></li>
-      <li class="list-item"><a href="#" class="list-link" target="_blank" rel="nopener noreferrer">LinkedIn</a>
-      </li>
-      <li class="list-item"><a href="#" class="list-link" target="_blank" rel="nopener noreferrer">GitHub</a>
-      </li>
-      <li class="list-item"><a href="#" class="list-link" target="_blank" rel="nopener noreferrer">CodePen</a>
-      </li>
-      <li class="list-item"><a href="#" class="list-link" target="_blank" rel="nopener noreferrer">Medium</a>
-      </li>
-    </ul>
-    <div class="copyright">
-      <a><span class="carpe">Carpe</span><span class="futura">Futura</span></a>
-      <p>2023 &copy; CarpeFutura All rights reserved.</p>
-    </div>
-  </footer> -->
   <script src="/script.js"></script>
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
     integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
