updated hero illustration

--- a/portolio-site/index.html
+++ b/portolio-site/index.html
@@ -62,7 +62,7 @@
           <a href="#" class="btn btn-lg mb-4" id="btn-primary">Learn More</a>
         </div>
         <div class="col-lg-6">
-          <img src="imgs\hero-image-edit(1).png" alt="Hero illustration" class="img-fluid">
+          <img src="imgs/web-design-portfolio.svg" alt="Hero illustration" class="img-fluid">
         </div>
       </div>
     </div>
@@ -71,37 +71,37 @@
   <section class="social-proof" class="py-5">
     <div class="container">
       <div class="row">
-        <div class="col-lg-6">
-          <h2 class="mb-3">See what our clients are saying</h2>
-          <p class="lg-font">
-            Our web design business has helped numerous clients achieve their online goals. Read what they have to say
-            about working with us:
-          </p>
-          <ul class="list-unstyled">
-            <li class="media mb-3">
-              <img src="/imgs/icons8-geometric-flowers-100.png" class="mr-3 img-fluid" alt="Client 1">
-              <div class="media-body">
-                <h5 class="mt-0 mb-1">Client 1</h5>
-                <p class="lg-font">
-                  "Working with the team at the web design business was an absolute pleasure. They listened to our needs
-                  and delivered a website that exceeded our expectations. We highly recommend them to anyone looking for
-                  a top-notch web design experience."
-                </p>
-              </div>
-            </li>
-            <li class="media mb-3">
-              <img src="/imgs/icons8-geometric-flowers-100.png" class="mr-3 img-fluid" alt="Client 2">
-              <div class="media-body">
-                <h5 class="mt-0 mb-1">Client 2</h5>
-                <p class="lg-font">
-                  "The web design business was a game changer for our business. Their expertise and attention to detail
-                  helped us create a website that accurately represents our brand and has helped us attract new
-                  customers."
-                </p>
-              </div>
-            </li>
-          </ul>
-        </div>
+        <!-- <div class="col-lg-6"> -->
+        <h2 class="mb-3">See what our clients are saying</h2>
+        <p class="lg-font">
+          Our web design business has helped numerous clients achieve their online goals. Read what they have to say
+          about working with us:
+        </p>
+        <ul class="list-unstyled">
+          <li class="media mb-3">
+            <img src="/imgs/icons8-geometric-flowers-100.png" class="mr-3 img-fluid" alt="Client 1">
+            <div class="media-body">
+              <h5 class="mt-0 mb-1">Client 1</h5>
+              <p class="lg-font">
+                "Working with the team at the web design business was an absolute pleasure. They listened to our needs
+                and delivered a website that exceeded our expectations. We highly recommend them to anyone looking for
+                a top-notch web design experience."
+              </p>
+            </div>
+          </li>
+          <li class="media mb-3">
+            <img src="/imgs/icons8-geometric-flowers-100.png" class="mr-3 img-fluid" alt="Client 2">
+            <div class="media-body">
+              <h5 class="mt-0 mb-1">Client 2</h5>
+              <p class="lg-font">
+                "The web design business was a game changer for our business. Their expertise and attention to detail
+                helped us create a website that accurately represents our brand and has helped us attract new
+                customers."
+              </p>
+            </div>
+          </li>
+        </ul>
+        <!-- </div> -->
       </div>
     </div>
   </section>
